# Spy-X-telegram

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Readme.md
cmake/: install-module.cmake  install-module.cmake.in  install-oatpp.cmake
cmake/compiler/: gcc.cmake  msvc.cmake
cmake/find/openssl/: FindOpenSSL.cmake
cmake/install/: install-cxxopts.cmake  install-gperf.cmake  install-jsoncpp.cmake  install-openssl.cmake  install-plog.cmake  install-td.cmake  install-zlib.cmake
cmake/toolchain/: windows-to-linux-toolchain.cmake
docs/: command-line-args.md  endpoints.md  spy-settings.md
resources/migrations/: chats-migration.sql  messages-content.sql  messages-migration.sql
src/: CMakeLists.txt
src/spy/: CMakeLists.txt  SpyComponents.hpp  SwaggerComponent.hpp  TelegramSpy.cpp  version.h
src/spy/auth/: ConfigAuth.cpp  ConfigAuth.hpp  SpyAuth.cpp  SpyAuth.hpp
src/spy/controller/: ErrorHandler.cpp  ErrorHandler.hpp  StaticController.hpp
src/spy/controller/ChatsController/: ChatsController.hpp
src/spy/controller/MessagesController/: MessagesController.hpp
src/spy/controller/SettingsController/: SettingsController.hpp
src/spy/db/: DatabaseComponents.hpp  MessagesDb.cpp  MessagesDb.hpp  SessionsDb.hpp
src/spy/db/ChatsDatabase/: ChatsDatabase.hpp
src/spy/db/MessagesDatabase/: MessagesDatabase.cpp  MessagesDatabase.hpp
src/spy/db/SessionsDatabase/: SessionsDatabase.hpp
src/spy/dto/: Chat.hpp  Message.hpp  MessageContent.hpp  MessageModification.hpp  SpySettings.hpp
src/spy/dto/helpers/: SequenceDto.hpp  StatusDto.hpp
src/spy/dto/messageContent/: MessageContent.hpp  MessageDocument.hpp  MessagePhoto.hpp  MessageText.hpp  MessageVideo.hpp  MessageVideoNote.hpp  MessageVoiceNote.hpp
src/spy/service/: SpyService.cpp  SpyService.hpp
src/spy/service/contentWorker/: ContentWorker.cpp  ContentWorker.hpp
src/spy/service/contentWorker/messageContent/: MessageDocument.hpp  MessagePhoto.hpp  MessageText.hpp  MessageVideo.hpp  MessageVideoNote.hpp  MessageVoiceNote.hpp
src/spy/service/controller/: BaseController.hpp  ControllersHandler.hpp  IController.hpp
src/spy/service/controller/ChatsController/: ChatsController.cpp  ChatsController.hpp
src/spy/service/controller/DeletedContentChatController/: DeletedContentChatController.cpp  DeletedContentChatController.hpp
src/spy/service/controller/DeletedContentChatController/Command/: CommandHandler.cpp  CommandHandler.hpp  ICommand.hpp
src/spy/service/controller/DeletedContentChatController/Command/HelpCommand/: HelpCommand.cpp  HelpCommand.hpp
src/spy/service/controller/DeletedContentChatController/Command/SaveDeletedCommand/: SaveDeletedCommand.cpp  SaveDeletedCommand.hpp
src/spy/service/controller/DeletedContentChatController/Command/SaveSecretCommand/: SaveSecretCommand.cpp  SaveSecretCommand.hpp
src/spy/service/controller/DeletedContentChatController/Command/SaveSizeCommand/: SaveSizeCommand.cpp  SaveSizeCommand.hpp
src/spy/service/controller/DeletedContentChatController/Command/SetChatGroupTypeCommand/: SetChatGroupTypeCommand.cpp  SetChatGroupTypeCommand.hpp
src/spy/service/controller/DeletedContentChatController/Command/SetExcludeChannelsCommand/: SetExcludeChannelsCommand.cpp  SetExcludeChannelsCommand.hpp
src/spy/service/controller/DeletedContentChatController/Command/SetExcludedChatsCommand/: SetExcludedChatsCommand.cpp  SetExcludedChatsCommand.hpp
src/spy/service/controller/DeletedContentChatController/Command/SetIncludedChatsCommand/: SetIncludedChatsCommand.cpp  SetIncludedChatsCommand.hpp
src/spy/service/controller/DeletedContentController/: DeletedContentController.cpp  DeletedContentController.hpp
src/spy/service/controller/NewContentController/: NewContentController.cpp  NewContentController.hpp
src/spy/service/controller/SettingsController/: SpySettingsController.cpp  SpySettingsController.hpp
src/spy/service/functions/: DownloadFile.cpp  FormattedTextToMarkdown.hpp  IFunction.h
src/spy/service/functions/DownloadFile/: DownloadFile.cpp  DownloadFile.hpp
src/spy/service/functions/SendMessage/: SendMessage.cpp  SendMessage.hpp
src/spy/service/functions/Utils/: MarkdownToFormattedText.hpp
src/spy/utils/: CmdParserSingleton.hpp  StringTools.cpp  StringTools.h
src/spy/utils/Logger/: ColorConsoleAppender.hpp  LogFormatter.hpp  Logger.cpp  Logger.hpp  SpyLog.h
src/tdlpp/: CMakeLists.txt
src/tdlpp/auth/: DefaultAuth.hpp  IAuth.hpp
src/tdlpp/base/: Handler.cpp  Handler.hpp  UpdateCalbacksHandler.hpp
src/tdlpp/generator/: CMakeLists.txt
src/tdlpp/generator/src/: generator.cpp
src/tdlpp/log/: Logger.hpp
